Fixes on visible line in content 5

--- a/src/Views/Home/Components/Content4/styles.module.scss
+++ b/src/Views/Home/Components/Content4/styles.module.scss
@@ -215,13 +215,12 @@
     -webkit-mask-size: 100% 12%, 100% 89%;
     mask-image: url('../../../../Assets/img/headPrivacyFlipped.png'), linear-gradient(black, black);
     mask-position: top bottom;
-    mask-size: 100% 12%, 100% 88%;
+    mask-size: 100% 12%, 100% 89%;
     mask-repeat: no-repeat;
     padding: 0 0 80px 0;
     width: 100%;
     color: #fff;
     text-align: center;
-    padding-top: 60px;
     position: relative;
     top: -100px;
     margin-bottom: -100px;
