--- a/src/Views/Home/Components/Content5/styles.module.scss
+++ b/src/Views/Home/Components/Content5/styles.module.scss
@@ -184,7 +184,6 @@
     background: url("../../../../Assets/img/index-bg-03.jpg") bottom center
       no-repeat #a427e3;
     width: 100%;
-    padding: 60px 20px;
     color: #fff;
     text-align: center;
     padding: 0 0 110px 0;
